# leetcode

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: lint.yml  ruff.yml
problems/: utils.py
problems/problem_0001/: solution1.py  solution_2.py
problems/problem_0002/: solution1.py
problems/problem_0003/: solution1.py
problems/problem_0004/: solution1.py  solution2.py  solution3.py  solution_3.py
problems/problem_0005/: solution1.py  solution2.py  solution3.py  solution4.py
problems/problem_0006/: solution1.py
problems/problem_0007/: solution1.py
problems/problem_0008/: solution1.py
problems/problem_0009/: solution_1.py
problems/problem_0010/: solution2.py  solution_1.py
problems/problem_0011/: solution1.py
problems/problem_0012/: solution1.py  solution_1.py
problems/problem_0013/: solution1.py  solution2.py
problems/problem_0014/: solution1.py  solution3.py  solution_1.py
problems/problem_0015/: solution_2.py
problems/problem_0016/: solution_1.py
problems/problem_0017/: solution1.py
problems/problem_0018/: solution1.py
problems/problem_0019/: solution1.py
problems/problem_0020/: solution1.py
problems/problem_0021/: solution1.py  solution_1.py
problems/problem_0022/: solution_1.py
problems/problem_0023/: solution_1.py  solution_2.py
problems/problem_0024/: solution_1.py  solution_2.py
problems/problem_0025/: solution_1.py
problems/problem_0026/: solution_1.py
problems/problem_0027/: solution_1.py
problems/problem_0028/: solution_1.py
problems/problem_0029/: solution_1.py
problems/problem_0030/: solution_1.py
problems/problem_0031/: solution_1.py
problems/problem_0032/: solution_1.py  solution_2.py
problems/problem_0033/: solution_1.py
problems/problem_0034/: solution_1.py  solution_2.py
problems/problem_0035/: solution_1.py
problems/problem_0036/: solution_1.py  solution_2.py
problems/problem_0037/: solution_1.py
problems/problem_0038/: solution_1.py  (+1 more)
scripts/: generate_problem.py  leetcode.py  run_ruff.sh
(+327 files in other folders)
