[project]
name = "leetcode"
version = "0.1.0"
description = ""
requires-python = ">=3.12"
authors = ["TurtleSmoke <46165291+TuWG@users.noreply.github.com>"]
readme = "README.md"
dependencies = [
    "browser-cookie3>=0.19.1",
    "jinja2>=3.1.4",
    "lxml>=5.3.0",
    "numpy>=2.1.2",
    "pathlib>=1.0.1",
    "pylint>=3.3.1",
    "pytest>=8.3.3",
    "pytest-timeout>=2.3.1",
    "requests>=2.32.3",
    "ruff>=0.7.1",
    "scikit-image>=0.24.0",
    "setuptools>=75.2.0",
    "tenacity>=9.0.0",
    "black>=24.10.0",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E741", "E731", "E501", "F405", "F403"]
